fixes in hero and fixed image alignment/placement

--- a/src/app/css/_image-fixed.scss
+++ b/src/app/css/_image-fixed.scss
@@ -46,7 +46,6 @@
 .fixed-image-background .fixed-image-picture .fixed-image-img {
   position: absolute;
   margin: auto;
-  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
